k8s/argo-events/event-source-real.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: a156cce4dba494266a47e8a7c2d002d2-1095449798.ap-southeast-2.elb.amazonaws.com
    http:
      paths:
      - path: /portal_backend
        pathType: Prefix
        backend:
          service:
           name: evsource-back-eventsource-svc
           port:
             number: 14000
      - path: /pink_api
        pathType: Prefix
        backend:
          service:
           name: evsource-back-eventsource-svc
           port:
             number: 14001
      - path: /portal_frontend_vue3
        pathType: Prefix
        backend:
          service:
           name: evsource-front-eventsource-svc 
           port:
             number: 15000
      - path: /pink_api_frontend
        pathType: Prefix
        backend:
          service:
           name: evsource-front-eventsource-svc 
           port:
             number: 15001
